--- a/html-template/css/styles.css
+++ b/html-template/css/styles.css
@@ -1,6 +1,6 @@
 .panelStyle {
 	font-size: 13px;
-	font-family:_MyriadProRegular;
+	font-family:Nobel-Light;
 	font-weight:bold;
 	color:#222222;
 }
